--- a/src/Reset.css
+++ b/src/Reset.css
@@ -139,3 +139,15 @@ table {
 button {
   cursor: pointer;
 }
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #fcbb26;
+  border-radius: 10px;
+  height:20px;
+}
+*::-webkit-scrollbar-track {
+  background-color: #aaa;
+}
